fix transition issue with footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 }
 
 .masonry-item {
+  opacity: 0;
   width: 50%;
   padding: 5px;
   img {
@@ -21,6 +22,7 @@
 }
 @media (max-width: 768px) {
   .masonry-item {
+    opacity: 0;
     width: 100%;
     padding: 5px;
     img {
@@ -211,24 +213,20 @@ h2 {
   font-family: "object-fit: cover";
 }
 
-.cursive {
-  font-family: "Open Sans", cursive;
-  font-weight: bold;
-  font-size: 1.5rem;
-}
-
-.about {
-  background-image: url("https://github.com/Rixiz/rixiz.github.io/blob/main/img/blankblack.png?raw=true");
-  background-size: cover;
-  background-position: center;
-  background-color: #070707;
-}
-
 .info-main {
   background-image: url("https://github.com/Rixiz/rixiz.github.io/blob/main/img/blankblack.png?raw=true");
   background-size: cover;
   background-position: center;
   background-color: #070707;
+}
+.info-background {
+  position: absolute;
+  background-image: url("https://github.com/Rixiz/rixiz.github.io/blob/main/img/blankblack.png?raw=true");
+  background-size: cover;
+  background-position: center;
+  background-color: #070707;
+  width: 100%;
+  height: 100%;
 }
 
 #scrollToTop {
@@ -1269,7 +1267,7 @@ li.current a {
 
 /* hr */
 hr.under-hr {
-  border-top: 1px solid #8c8b8b;
+  border-top: 0px solid #8c8b8b;
   margin-top: 60px;
   padding-right: 5%;
   padding-left: 5%;
@@ -1279,18 +1277,9 @@ hr.under-hr {
 
 .footer {
   position: center;
-  color: #6f6f6f;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  height: 60px;
-}
-
-.footer {
-  position: center;
   color: #5f5f5f;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  height: 60px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 @media (max-width: 767px) {
@@ -1319,8 +1308,9 @@ hr.under-hr {
 }
 
 .copyright-footer {
-  font-size: 12px;
+  font-size: 14px;
   color: #7c7c7c;
   font-weight: 500;
   font-size: "Arial", "open-sans";
+  margin: 0;
 }
